--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "\"# grocery backend\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node index.js",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
